<resources>
    <string name="app_name">Your App Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="products">PRODUCTS</string>
    <string name="totalSum">TOTAL</string>
    <string name="productPrice">Price</string>
    <string name="saveBtn">Save</string>
    <string name="Name">Product Name</string>
    <string name="productDescription">Description</string>
    <string name="itemPrice">price</string>
    <string name="capture_photo">Capture Product</string>
</resources>
